# mathmodel-toolkit

./: .gitignore  LICENSE  README.md  generate_gufeng.py  install.bat  install.sh  plan.md  pyproject.toml  pyrightconfig.json  run.bat  setup_api.bat  start.py  start_pro.py  todo.md
.github/workflows/: tests.yml
api/: .env.example  __init__.py  analyzer.py  client.py  config.py
code/: problem1.py  problem2.py  problem4.py  utils.py
demo/: demo_usage.py  附件1_评价数据.xlsx  附件2_需求数据.xlsx
examples/cumcm2023a/: README.md
examples/mcm2024a/: README.md
figures/: fig_flow_q1.drawio  fig_roadmap.drawio
mathmodel/: __init__.py  cli.py
mathmodel/analyzer/: __init__.py  classifier.py  knowledge_base.py  recommender.py
mathmodel/io/: __init__.py  data.py
mathmodel/models/: __init__.py  differential.py  evaluation.py  graph.py  ml.py  optimization.py  statistics.py
mathmodel/paper/: __init__.py  compiler.py  latex_writer.py  word_writer.py  writer.py
mathmodel/parser/: __init__.py  data_loader.py  docx_reader.py  pdf_reader.py  problem_splitter.py
mathmodel/pipeline/: __init__.py  ai_figure_selector.py  ai_paper_writer.py  ai_solver.py  config.py  dedicated_solvers.py  deep_solve.py  deep_thinker.py  menu.py  orchestrator.py  professional_figures.py  progress.py  rich_progress.py  skills_pipeline.py  smart_orchestrator.py  universal_solver.py
mathmodel/preprocessing/: __init__.py  feature.py  missing.py  normalize.py  outlier.py
mathmodel/pro/: __init__.py  chart_suite.py  deep_sensitivity.py  error_diagnostics.py  multi_model.py  result_writer.py
mathmodel/sensitivity/: __init__.py  analysis.py
mathmodel/solver/: __init__.py  code_generator.py  runner.py  validator.py
mathmodel/utils/: __init__.py  helpers.py
mathmodel/visualization/: __init__.py  figure_library.py  plots.py  styles.py
matlab/: README.md
matlab/models/: grey_forecast.m  topsis.m
paper/: main.tex
problems/sample/: 第三次作业.docx  附件1. 全国31个省份城镇居民家庭平均每人全年消费性支出数据 .xlsx  附件2.各国森林、草原资源.doc  题目.txt
reports/: ANALYSIS_MODELING_REPORT.md  RESULTS_REPORT.md  VERIFY_REPORT.md
skills/mrite-check/: SKILL.md
skills/mrite-code/: SKILL.md
skills/mrite-compile/: SKILL.md
skills/mrite-figure/: SKILL.md
skills/mrite-plan/: SKILL.md
skills/mrite-preprocess/: SKILL.md
skills/mrite-read/: SKILL.md
skills/mrite-solve/: SKILL.md
skills/mrite-write/: SKILL.md
skills/systematic-debugging/: SKILL.md
templates/latex/cumcm/: cumcm-template.tex
tests/: test_all.py  test_models.py  test_preprocessing.py
webui/: app.py
